feat(backend): presencia (online/en partida/no molestar) y chat persistente con amigos